Added group modification from frontend
